Add vscode stuff to gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,18 @@ sketch
 
 # End of https://www.toptal.com/developers/gitignore/api/react,dotnetcore
 
+# https://github.com/github/gitignore/blob/main/Global/VisualStudioCode.gitignore
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+# Local History for Visual Studio Code
+.history/
+# Built Visual Studio Code Extensions
+*.vsix
+
+# Miscellanious
 .projectile
 .dir-locals.el
 .env
