--- a/client-backend/ClientApi.csproj
+++ b/client-backend/ClientApi.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\libs\keycloak-dotnet-client\AmbevTech.Keycloak.Client\AmbevTech.Keycloak.Client.csproj" />
+  </ItemGroup>
+
 </Project>
