--- a/.env.development
+++ b/.env.development
@@ -1,12 +1,13 @@
-# These two are required by keycloak
-KEYCLOAK_ADMIN=admin
-KEYCLOAK_ADMIN_PASSWORD=admin
-
 KEYCLOAK_PORT=8000
 CLIENT_PORT=8080
 CLIENT_BACKEND_PORT=8070
 RESOURCE_SERVER_PORT=8060
 
+# These are required by Keycloak
+KEYCLOAK_ADMIN=admin
+KEYCLOAK_ADMIN_PASSWORD=admin
+
+# These are used by keycloak-setup.sh
 KEYCLOAK_REALM_NAME=myrealm
 
 KEYCLOAK_USER_UNAME=john_doe
