Update env file and keycloak-setup.sh to register a single client
instead of one for the front channel (client) and other for the back channel
(which was incorrect).

--- a/.env.development
+++ b/.env.development
@@ -13,8 +13,6 @@ KEYCLOAK_REALM_NAME=myrealm
 KEYCLOAK_USER_UNAME=john_doe
 KEYCLOAK_USER_EMAIL=john_doe@domain.com
 
-CLIENT_ID=react_app_id
-CLIENT_SECRET=react_app_secret
+CLIENT_ID=client_id
+CLIENT_SECRET=client_secret
 
-CLIENT_BACKEND_ID=dotnet_api_id
-CLIENT_BACKEND_SECRET=dotnet_api_secret
