--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,12 +13,14 @@ services:
     image: keycloak-poc/keycloak-client-backend:1.0
     ports:
       - '${CLIENT_BACKEND_PORT}:80'
+    env_file: .env
     depends_on:
       - keycloak
   client:
     image: node:16.16.0
     ports:
       - '${CLIENT_PORT}:8080'
+    env_file: .env
     volumes:
       - ./client/src/:/home/node
     depends_on:
