Update .env.development setting variables for keycloak libs
Note that __ indicates nested configs.
`Keycloak__Realm` is read as `Keycloak:Realm` by the .NET APIs.

--- a/.env.development
+++ b/.env.development
@@ -16,3 +16,12 @@ KEYCLOAK_USER_EMAIL=john_doe@domain.com
 CLIENT_ID=client_id
 CLIENT_SECRET=client_secret
 
+# These are used by keycloak-dotnet-client, keycloak-dotnet-jwt
+Keycloak__AuthServerUrl=localhost:${KEYCLOAK_PORT}
+Keycloak__Realm=${KEYCLOAK_REALM_NAME}
+# keycloak-dotnet-client loads the "Keycloak:Resource" variable into client_id
+# https://dev.azure.com/AMBEV-SA/Plataforma-comum/_git/keycloak-dotnet-client?path=/AmbevTech.Keycloak.Client/Service/TokenManager.cs&version=GBmain&line=25&lineEnd=25&lineStartColumn=13&lineEndColumn=60&lineStyle=plain&_a=contents
+Keycloak__Resource=${CLIENT_ID}
+
+# This are used by keycloak-dotnet-client
+Keycloak__Secret=${CLIENT_SECRET}
