Set user password after creation in keycloak-setup.sh

--- a/.env.development
+++ b/.env.development
@@ -12,6 +12,7 @@ KEYCLOAK_REALM_NAME=myrealm
 
 KEYCLOAK_USER_UNAME=john_doe
 KEYCLOAK_USER_EMAIL=john_doe@domain.com
+KEYCLOAK_USER_PWD=123456
 
 CLIENT_ID=client_id
 CLIENT_SECRET=client_secret
