--- a/.env.development
+++ b/.env.development
@@ -18,7 +18,7 @@ CLIENT_ID=client_id
 CLIENT_SECRET=client_secret
 
 # These are used by keycloak-dotnet-client, keycloak-dotnet-jwt
-Keycloak__AuthServerUrl=localhost:${KEYCLOAK_PORT}
+Keycloak__AuthServerUrl=127.0.0.1:${KEYCLOAK_PORT}
 Keycloak__Realm=${KEYCLOAK_REALM_NAME}
 # keycloak-dotnet-client loads the "Keycloak:Resource" variable into client_id
 # https://dev.azure.com/AMBEV-SA/Plataforma-comum/_git/keycloak-dotnet-client?path=/AmbevTech.Keycloak.Client/Service/TokenManager.cs&version=GBmain&line=25&lineEnd=25&lineStartColumn=13&lineEndColumn=60&lineStyle=plain&_a=contents
