Rename resource-server .NET project to PascalCase
That's .NET standard.

--- a/resource-server/Properties/launchSettings.json
+++ b/resource-server/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "resource_server": {
+    "ResourceServer": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
