--- a/resource-server/ResourceServer.csproj
+++ b/resource-server/ResourceServer.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>resource_server</RootNamespace>
+    <RootNamespace>ResourceServer</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
