Add CLIENT_ROLE variable to .env.development
This will be used to create a client-role in keycloak and to assign it to the
user.

--- a/.env.development
+++ b/.env.development
@@ -17,6 +17,8 @@ KEYCLOAK_USER_PWD=123456
 CLIENT_ID=client_id
 CLIENT_SECRET=client_secret
 
+CLIENT_ROLE=read_contacts
+
 
 # This are used by keycloak-dotnet-client
 Keycloak__Secret=${CLIENT_SECRET}
