--- a/.env.development
+++ b/.env.development
@@ -23,6 +23,9 @@ CLIENT_ROLE=read_contacts
 # This are used by keycloak-dotnet-client
 Keycloak__Secret=${CLIENT_SECRET}
 
+# This are used by keycloak-dotnet-jwt (for the CORS policy)
+CLIENT_URL=http://localhost:${CLIENT_PORT}
+
 # These are used by keycloak-dotnet-client, keycloak-dotnet-jwt
 Keycloak__AuthServerUrl=127.0.0.1:${KEYCLOAK_PORT}
 Keycloak__Realm=${KEYCLOAK_REALM_NAME}
