--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,11 @@ services:
     command: start-dev
     volumes:
       - ./libs/keycloak-themes/theme:/opt/keycloak/themes
+  resource-server:
+    image: keycloak-poc/resource-server:1.0
+    ports:
+      - '${RESOURCE_SERVER_PORT}:80'
+    env_file: .env
   client-backend:
     image: keycloak-poc/keycloak-client-backend:1.0
     ports:
