Update CLIENT_URL variable comments in .env file
It is used now by both client-backend and resource-server

--- a/.env.development
+++ b/.env.development
@@ -23,10 +23,10 @@ CLIENT_ROLE=read_contacts
 # This are used by keycloak-dotnet-client
 Keycloak__Secret=${CLIENT_SECRET}
 
-# This are used by keycloak-dotnet-jwt (for the CORS policy)
-CLIENT_URL=http://localhost:${CLIENT_PORT}
-
 # These are used by keycloak-dotnet-client, keycloak-dotnet-jwt
 Keycloak__AuthServerUrl=127.0.0.1:${KEYCLOAK_PORT}
 Keycloak__Realm=${KEYCLOAK_REALM_NAME}
 Keycloak__Resource=${CLIENT_ID} # for keycloak-dotnet-jwt, the resource is the client
+
+# This is used in the CORS policy of the resource-server and client-backend
+CLIENT_URL=http://localhost:${CLIENT_PORT}
