Update comments in .env file

--- a/.env.development
+++ b/.env.development
@@ -17,6 +17,7 @@ KEYCLOAK_USER_PWD=123456
 CLIENT_ID=client_id
 CLIENT_SECRET=client_secret
 
+# This should be the same as defined in Resource Server's /contacts endpoint
 CLIENT_ROLE=read_contacts
 
 
@@ -26,7 +27,7 @@ Keycloak__Secret=${CLIENT_SECRET}
 # These are used by keycloak-dotnet-client, keycloak-dotnet-jwt
 Keycloak__AuthServerUrl=127.0.0.1:${KEYCLOAK_PORT}
 Keycloak__Realm=${KEYCLOAK_REALM_NAME}
-Keycloak__Resource=${CLIENT_ID} # for keycloak-dotnet-jwt, the resource is the client
+Keycloak__Resource=${CLIENT_ID}
 
 # This is used in the CORS policy of the resource-server and client-backend
 CLIENT_URL=http://localhost:${CLIENT_PORT}
