Make authorization method configurable through a "USE_API_AUTH" var
README will be updated soon.

--- a/.env.development
+++ b/.env.development
@@ -17,9 +17,9 @@ KEYCLOAK_USER_PWD=123456
 CLIENT_ID=client_id
 CLIENT_SECRET=client_secret
 
-# This should be the same as defined in Resource Server's /contacts endpoint
-CLIENT_ROLE=read_contacts
+USE_API_AUTH=false
 
+CLIENT_ROLE=read_contacts # this should match Resource Server's /contacts endpoint
 
 # This are used by keycloak-dotnet-client
 Keycloak__Secret=${CLIENT_SECRET}
