--- a/.env.development
+++ b/.env.development
@@ -19,7 +19,8 @@ CLIENT_SECRET=client_secret
 
 USE_API_AUTH=false
 
-CLIENT_ROLE=read_contacts # this should match Resource Server's /contacts endpoint
+# this should match the /contacts endpoint in Resource Server
+CLIENT_ROLE=read_contacts
 
 # This are used by keycloak-dotnet-client
 Keycloak__Secret=${CLIENT_SECRET}
