--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,14 +16,14 @@ services:
       - '${RESOURCE_SERVER_PORT}:80'
     env_file: .env
   client-backend:
-    image: keycloak-poc/keycloak-client-backend:1.0
+    image: keycloak-poc/client-backend:1.0
     ports:
       - '${CLIENT_BACKEND_PORT}:80'
     env_file: .env
     depends_on:
       - keycloak
   client:
-    image: keycloak-poc/keycloak-client:1.0
+    image: keycloak-poc/client:1.0
     ports:
       - '${CLIENT_PORT}:3000'
     env_file: .env
