--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,11 +15,15 @@ services:
     ports:
       - '${RESOURCE_SERVER_PORT}:80'
     env_file: .env
+    extra_hosts:
+      - "localhost:host-gateway"
   client-backend:
     image: keycloak-poc/client-backend:1.0
     ports:
       - '${CLIENT_BACKEND_PORT}:80'
     env_file: .env
+    extra_hosts:
+      - "localhost:host-gateway"
     depends_on:
       - keycloak
   client:
