Update Keycloak__AuthServerUrl in .env file
With the protocol the `localhost` for both the keycloak-dotnet-client
and keycloak-dotnet-jwt.

--- a/.env.development
+++ b/.env.development
@@ -26,7 +26,7 @@ CLIENT_ROLE=read_contacts
 Keycloak__Secret=${CLIENT_SECRET}
 
 # These are used by keycloak-dotnet-client, keycloak-dotnet-jwt
-Keycloak__AuthServerUrl=127.0.0.1:${KEYCLOAK_PORT}
+Keycloak__AuthServerUrl=http://localhost:${KEYCLOAK_PORT}
 Keycloak__Realm=${KEYCLOAK_REALM_NAME}
 Keycloak__Resource=${CLIENT_ID}
 
