--- a/.env.development
+++ b/.env.development
@@ -22,7 +22,16 @@ USE_API_AUTH=false
 # this should match the /contacts endpoint in Resource Server
 CLIENT_ROLE=read_contacts
 
-# This are used by keycloak-dotnet-client
+# These ared used by the client app
+# Please visit client/src/config.json and update things accordingly
+# See "Environment Variables" section in README for details
+# REACT_APP_CLIENT_ID=${CLIENT_ID}
+# REACT_APP_KEYCLOAK_PORT=${KEYCLOAK_PORT}
+# REACT_APP_KEYCLOAK_REALM_NAME=${KEYCLOAK_REALM_NAME}
+# REACT_APP_RESOURCE_SERVER_URL=http://localhost:${RESOURCE_SERVER_PORT}
+# REACT_APP_API_URL=http://localhost:${CLIENT_BACKEND_PORT}
+
+# This is used by keycloak-dotnet-client
 Keycloak__Secret=${CLIENT_SECRET}
 
 # These are used by keycloak-dotnet-client, keycloak-dotnet-jwt
