Format comments in .env.development

--- a/.env.development
+++ b/.env.development
@@ -19,7 +19,7 @@ CLIENT_SECRET=client_secret
 
 USE_API_AUTH=false
 
-# this should match the /contacts endpoint in Resource Server
+# should match the /contacts endpoint in Resource Server
 CLIENT_ROLE=read_contacts
 
 # These ared used by the client app
