Update default values for CLIENT_ID and CLIENT_SECRET variables
Not they match the examples in the README file.

--- a/client/src/config.json
+++ b/client/src/config.json
@@ -4,7 +4,7 @@
         "resourceServer": "http://localhost:8060"
     },
     "keycloak": {
-        "clientId": "client_id",
+        "clientId": "client_id_123",
         "realm": "myrealm",
         "url": "http://localhost:8000"
     }
