--- a/.env.development
+++ b/.env.development
@@ -14,8 +14,8 @@ KEYCLOAK_USER_UNAME=john_doe
 KEYCLOAK_USER_EMAIL=john_doe@domain.com
 KEYCLOAK_USER_PWD=123456
 
-CLIENT_ID=client_id
-CLIENT_SECRET=client_secret
+CLIENT_ID=client_id_123
+CLIENT_SECRET=client_secret_123
 
 USE_API_AUTH=false
 
