Fix host node_modules directory overwriting client's
Now we're binding only the src directory.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       - '${CLIENT_PORT}:3000'
     env_file: .env
     volumes:
-      - ./client:/app
+      - ./client/src:/app/src
     depends_on:
       - client-backend
       - resource-server
